--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="hu.bme.aut.mobsoft.lab.mobszofthomework">
 
+    <meta-data
+        android:name="DATABASE"
+        android:value="mobsoftlab.db"/>
+    <meta-data
+        android:name="VERSION"
+        android:value="1"/>
+    <meta-data
+        android:name="QUERY_LOG"
+        android:value="true"/>
+    <meta-data
+        android:name="DOMAIN_PACKAGE_NAME"
+        android:value="hu.bme.aut.mobsoft.mobsoftlab.model"/>
+
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
