--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,21 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'io.fabric'
+
 
 android {
     compileSdkVersion 25
@@ -57,4 +73,11 @@ dependencies {
 
     //Mockito
     testCompile "org.mockito:mockito-core:1.10.19"
+
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+        transitive = true;
+    }
+
+    compile 'com.google.android.gms:play-services-analytics:10.+'
+
 }
